[package]
name = "synch"
version = "0.1.0"
edition = "2021"

[dependencies]
crdts = "7.3.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
webrtc = "0.11.0"
ciborium = "0.2.2"
anyhow = "1.0.86"
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
bytes = { version = "1.6.1", features = ["std", "serde"] }
log = "0.4.22"
env_logger = { version = "0.11.3", features = ["auto-color"] }
futures = "0.3.30"